<resources>
    <string name="app_name">MyLife</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="username">Jhon Appleseed</string>
    <string name="user_gender">Male</string>
    <string name="user_details">35 year old male from Cairo, Egypt</string>
    <string name="blood_type">AB+</string>
    <string name="user_weight">95 Kg</string>
    <string name="user_height">185 cm</string>
    <string name="sleep_hours">7 hrs.</string>
    <string name="fav_location">German University in Cairo</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="shared_preferences_file_name">mylife_shared_preferences</string>
    <string name="title_activity_my_sleep">MySleep</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_productivity">MyProductivity</string>
    <string name="title_activity_my_locations">MyLocations</string>
    <string name="sign_up"><u>Sign Up</u></string>

    <string-array name="categories_array">
        <item>Social Media</item>
        <item>Health &amp; Fitness</item>
        <item>Games</item>
        <item>Productivity</item>
        <item>News</item>
    </string-array>

    <string-array name="meals_array">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="preference_file_key">com.example.mylife.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_day_calendar_view">My Day</string>
    <string name="title_activity_my_tasks">MyTasks</string>
    <string name="title_activity_my_meals">MyMeals</string>
    <string name="title_activity_my_mood">MyMood</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_profile_settings">Settings</string>

</resources>
